--- a/Movies/Contratempo.html
+++ b/Movies/Contratempo.html
@@ -10,7 +10,7 @@
 <body onload="TimeControl()">
     <h1 class="Title">Contratempo</h1>
     <h2 class="Sub Title"></h2>
-	<iframe id="contratempo" src="https://drive.google.com/file/d/1zQIf9GswOkNQzD6x7TStxwNO9cEbENUL/preview?start=5"
+	<iframe id="contratempo" src="https://drive.google.com/file/d/1zQIf9GswOkNQzD6x7TStxwNO9cEbENUL/preview?"
                 frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen">
 
     </iframe>
