--- a/Movies/Top-Gun.html
+++ b/Movies/Top-Gun.html
@@ -1,12 +1,12 @@
-<html>
+Ôªø<html>
 <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="../Styles/moviePg.css" />
-    <title>Top Gun - Asses indom·veis</title>
+    <title>Top Gun - Asses indom√°veis</title>
 </head>
 <body>
     <h1 class="Title">Top Gun</h1>
-    <h2 class="Sub Title">Asses Indom·veis</h2>
+    <h2 class="Sub Title">Asses Indom√°veis</h2>
 
     <iframe         
         src="https://drive.google.com/file/d/1qOJpFjuBGaYKXnwV1bO3utfaieBNznxD/preview?" 
