--- a/Movies/Rei-Arthur.html
+++ b/Movies/Rei-Arthur.html
@@ -9,9 +9,8 @@
     <h1 class="Title">Rei Arthur</h1>
     <h2 class="Sub Title">A lenda da espada</h2>
 
-    <video controls preload="metadata">
-        <source src="https://drive.google.com/file/d/1OL-d0AVoagXJgHZ0Uyz2-gXblAAkJUBW/preview?" type="video/mp4" />
-        <track label="Portuguese" kind="subtitles" srclang="pt-br" src="../Subtitles/A-piada-mortal.vtt" default>
-    </video>
+    <iframe src="https://drive.google.com/file/d/1OL-d0AVoagXJgHZ0Uyz2-gXblAAkJUBW/preview?"
+            frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen">           
+    </iframe>
 </body>
 </html>
