--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="pt-br">
     <head>
-        <meta charset="iso-8859-1" />
+        <meta charset="utf-8" />
         <link rel="stylesheet" href="Styles/home.css"/>
 
         <title>Home - Watchers</title>
@@ -15,7 +15,7 @@
                     <ul class="info">
                         <li class="topic-Title"><strong>Rei Arthur</strong></li>
                         <li class="topic-Subtitle">A lenda da espada</li>
-                        <li class="topic">Duração: 2h 6min 13s</li>
+                        <li class="topic">DuraÃ§Ã£o: 2h 6min 13s</li>
                         <li class="topic">Dublado</li>
                     </ul>
                 </a>
@@ -28,7 +28,7 @@
                     <ul class="info">
                         <li class="topic-Title"><strong>Thor</strong></li>
                         <li class="topic-Subtitle">Ragnarok</li>
-                        <li class="topic">Duração: 2h 10min 30s</li>
+                        <li class="topic">DuraÃ§Ã£o: 2h 10min 30s</li>
                         <li class="topic">Dublado</li>
                     </ul>
                 </a>
@@ -39,8 +39,8 @@
                     <img class="Capa Top-Gun" src="Images/Top-Gun.jpg" />
                     <ul class="info">
                         <li class="topic-Title"><strong>Top Gun</strong></li>
-                        <li class="topic-Subtitle">Asses indomáveis</li>
-                        <li class="topic">Duração: 1h 49min 38s</li>
+                        <li class="topic-Subtitle">Asses indomÃ¡veis</li>
+                        <li class="topic">DuraÃ§Ã£o: 1h 49min 38s</li>
                         <li class="topic">Dublado</li>
                     </ul>
                 </a>
@@ -53,7 +53,7 @@
                     <ul class="info">
                         <li class="topic-Title"><strong>Batman</strong></li>
                         <li class="topic-Subtitle">O cavaleiro das trevas</li>
-                        <li class="topic">Duração: 2h 32min 13s</li>
+                        <li class="topic">DuraÃ§Ã£o: 2h 32min 13s</li>
                         <li class="topic">Dublado</li>
                     </ul>
                 </a>
@@ -65,19 +65,19 @@
                     <ul class="info">
                         <li class="topic-Title"><strong>Batman</strong></li>
                         <li class="topic-Subtitle">A piada mortal</li>
-                        <li class="topic">Duração: 1h 45min</li>
-                        <li class="topic">Inglês</li>
+                        <li class="topic">DuraÃ§Ã£o: 1h 45min</li>
+                        <li class="topic">InglÃªs</li>
                     </ul>
                 </a>
             </nav>
 
-            <nav class="titulo Como-treinar-seu-dragão-3">
-                <a href="Movies/Como-treinar-seu-dragão-3.html">
-                    <img class="Capa Como-treinar-seu-dragão-3" src="Images/Como treinar seu Dragão 3.jpg" />
+            <nav class="titulo Como-treinar-seu-dragÃ£o-3">
+                <a href="Movies/Como-treinar-seu-dragÃ£o-3.html">
+                    <img class="Capa Como-treinar-seu-dragÃ£o-3" src="Images/Como treinar seu DragÃ£o 3.jpg" />
                     <ul class="info">
-                        <li class="topic-Title"><strong>Como treinar seu Dragão 3</strong></li>
+                        <li class="topic-Title"><strong>Como treinar seu DragÃ£o 3</strong></li>
                         <li class="topic-Subtitle"></li>
-                        <li class="topic">Duração: 1h 44min 06s</li>
+                        <li class="topic">DuraÃ§Ã£o: 1h 44min 06s</li>
                         <li class="topic">Dublado</li>
                     </ul>
                 </a>
@@ -89,7 +89,7 @@
                     <ul class="info">
                         <li class="topic-Title"><strong>Deadpool</strong></li>
                         <li class="topic-Subtitle"></li>
-                        <li class="topic">Duração: 1h 48min 06s</li>
+                        <li class="topic">DuraÃ§Ã£o: 1h 48min 06s</li>
                         <li class="topic">Dublado</li>
                     </ul>
                 </a>
@@ -101,7 +101,7 @@
                     <ul class="info">
                         <li class="topic-Title"><strong>Um Contratempo</strong></li>
                         <li class="topic-Subtitle"></li>
-                        <li class="topic">Duração: 1h 48min 06s</li>
+                        <li class="topic">DuraÃ§Ã£o: 1h 48min 06s</li>
                         <li class="topic">Dublado</li>
                     </ul>
                 </a>
@@ -111,9 +111,9 @@
                 <a href="Movies/Se-beber-nao-case.html">
                     <img class="Capa Se-beber-nao-case" src="Images/Se beber nao case.jpg" />
                     <ul class="info">
-                        <li class="topic-Title"><strong>Se beber não case</strong></li>
+                        <li class="topic-Title"><strong>Se beber nÃ£o case</strong></li>
                         <li class="topic-Subtitle"></li>
-                        <li class="topic">Duração: 1h 39min 45s</li>
+                        <li class="topic">DuraÃ§Ã£o: 1h 39min 45s</li>
                         <li class="topic">Dublado</li>
                     </ul>
                 </a>
@@ -123,9 +123,9 @@
                 <a href="Movies/Se-beber-nao-case-2.html">
                     <img class="Capa Se-beber-nao-case-2" src="Images/Se beber nao case 2.jpg" />
                     <ul class="info">
-                        <li class="topic-Title"><strong>Se beber não case 2</strong></li>
+                        <li class="topic-Title"><strong>Se beber nÃ£o case 2</strong></li>
                         <li class="topic-Subtitle"></li>
-                        <li class="topic">Duração: 1h 41min 49s</li>
+                        <li class="topic">DuraÃ§Ã£o: 1h 41min 49s</li>
                         <li class="topic">Dublado</li>
                     </ul>
                 </a>
@@ -135,9 +135,9 @@
                 <a href="Movies/Se-beber-nao-case-3.html">
                     <img class="Capa Se-beber-nao-case-3" src="Images/Se beber nao case 3.jpg" />
                     <ul class="info">
-                        <li class="topic-Title"><strong>Se beber não case 3</strong></li>
+                        <li class="topic-Title"><strong>Se beber nÃ£o case 3</strong></li>
                         <li class="topic-Subtitle"></li>
-                        <li class="topic">Duração: 1h 40min 08s</li>
+                        <li class="topic">DuraÃ§Ã£o: 1h 40min 08s</li>
                         <li class="topic">Dublado</li>
                     </ul>
                 </a>
@@ -146,16 +146,16 @@
         </div><!--Fim div filmes-->
 
         <div class="series">
-            <h1>Séries</h1>
+            <h1>SÃ©ries</h1>
             <nav class="titulo Sherlock">
                 <a href="Movies/Sherlock.html">
                     <img class="Capa Sherlock" src="Images/Sherlock.jpg" />
                     <ul class="info">
                         <li class="topic-Title"><strong>Sherlock</strong></li>
-                        <li class="topic">1ª Temporada</li>
-                        <li class="topic">Episódio 1</li>
+                        <li class="topic">1Âª Temporada</li>
+                        <li class="topic">EpisÃ³dio 1</li>
                         <li class="topic">Study in Pink</li>
-                        <li class="topic">Duração: 55min</li>
+                        <li class="topic">DuraÃ§Ã£o: 55min</li>
                         <li class="topic">Legendado</li>
                     </ul>
                 </a>
