--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 </a>
             </nav>
 
-            <nav class="titulo Se-beber-nao-case-2" style="display: none">
+            <nav class="titulo Se-beber-nao-case-2">
                 <a href="Movies/Se-beber-nao-case-2.html">
                     <img class="Capa Se-beber-nao-case-2" src="Images/Se beber nao case 2.jpg" />
                     <ul class="info">
