--- a/Movies/Se-beber-nao-case.html
+++ b/Movies/Se-beber-nao-case.html
@@ -14,7 +14,7 @@
             frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
     </iframe>
 
-    <div class="sequencia" style="display: none">
+    <div class="sequencia">
         <nav class="titulo Se-beber-nao-case-2">
             <a href="Se-beber-nao-case-2.html">
                 <img class="Capa Se-beber-nao-case-2" src="../Images/Se beber nao case 2.jpg" />
@@ -27,7 +27,7 @@
             </a>
         </nav>
 
-        <nav class="titulo Se-beber-nao-case-3">
+        <nav class="titulo Se-beber-nao-case-3"  style="display: none">
             <a href="Se-beber-nao-case-3.html">
                 <img class="Capa Se-beber-nao-case-3" src="../Images/Se beber nao case 3.jpg" />
                 <ul class="info">
