--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 </a>
             </nav>
 
-            <nav class="titulo Se-beber-nao-case-3" style="display: none">
+            <nav class="titulo Se-beber-nao-case-3">
                 <a href="Movies/Se-beber-nao-case-3.html">
                     <img class="Capa Se-beber-nao-case-3" src="Images/Se beber nao case 3.jpg" />
                     <ul class="info">
