--- a/Movies/Se-beber-nao-case.html
+++ b/Movies/Se-beber-nao-case.html
@@ -27,7 +27,7 @@
             </a>
         </nav>
 
-        <nav class="titulo Se-beber-nao-case-3"  style="display: none">
+        <nav class="titulo Se-beber-nao-case-3">
             <a href="Se-beber-nao-case-3.html">
                 <img class="Capa Se-beber-nao-case-3" src="../Images/Se beber nao case 3.jpg" />
                 <ul class="info">
