--- a/Movies/Se-beber-nao-case-2.html
+++ b/Movies/Se-beber-nao-case-2.html
@@ -1,16 +1,41 @@
 ﻿<html>
 <head>
 	<meta charset="utf-8" />
+    <link rel="stylesheet" href="../Styles/seq.css"/>
 	<link rel="stylesheet" href="../Styles/moviePg.css" />
 	<title>Se beber não case 2</title>
 </head>
 <body>
-	<h1 class="Title">Se beber não case</h1>
-	<h2 class="Sub Title"></h2>
+    <h1 class="Title">Se beber não case 2</h1>
+    <h2 class="Sub Title"></h2>
 
-	<iframe src="https://drive.google.com/file/d/1DUTkG3MOWwQPre00nGNCZtqAsA0qdgxB/preview?"
-			frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-	</iframe>"
+    <iframe src="https://drive.google.com/file/d/1DUTkG3MOWwQPre00nGNCZtqAsA0qdgxB/preview?"
+            frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>"
 
+    <div class="sequencia">
+        <nav class="titulo Se-beber-nao-case">
+            <a href="Se-beber-nao-case.html">
+                <img class="Capa Se-beber-nao-case-2" src="../Images/Se beber nao case.jpg" />
+                <ul class="info">
+                    <li class="topic-Title"><strong>Se beber não case</strong></li>
+                    <li class="topic-Subtitle"></li>
+                    <li class="topic">Duração: 1h 39min 45s</li>
+                    <li class="topic">Dublado</li>
+                </ul>
+            </a>
+        </nav>
+
+        <nav class="titulo Se-beber-nao-case-3">
+            <a href="Se-beber-nao-case-3.html">
+                <img class="Capa Se-beber-nao-case-3" src="../Images/Se beber nao case 3.jpg" />
+                <ul class="info">
+                    <li class="topic-Title"><strong>Se beber não case 3</strong></li>
+                    <li class="topic-Subtitle"></li>
+                    <li class="topic">Duração: 1h 40min 08s</li>
+                    <li class="topic">Dublado</li>
+                </ul>
+            </a>
+        </nav>
+    </div>
 </body>
 </html>
