--- a/Movies/Se-beber-nao-case-3.html
+++ b/Movies/Se-beber-nao-case-3.html
@@ -1,6 +1,7 @@
 ﻿<html>
 <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="../Styles/seq.css" />
     <link rel="stylesheet" href="../Styles/moviePg.css" />
     <title>Se beber não case 3</title>
 </head>
@@ -9,8 +10,32 @@
     <h2 class="Sub Title"></h2>
 
     <iframe src="https://drive.google.com/file/d/1O8SWSqrm4N6EROJaxQ0B8inttHTqmu6J/preview?"
-            frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-    </iframe>"
+            frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+    <div class="sequencia">
+        <nav class="titulo Se-beber-nao-case">
+            <a href="Se-beber-nao-case.html">
+                <img class="Capa Se-beber-nao-case-2" src="../Images/Se beber nao case.jpg" />
+                <ul class="info">
+                    <li class="topic-Title"><strong>Se beber não case</strong></li>
+                    <li class="topic-Subtitle"></li>
+                    <li class="topic">Duração: 1h 39min 45s</li>
+                    <li class="topic">Dublado</li>
+                </ul>
+            </a>
+        </nav>
+
+        <nav class="titulo Se-beber-nao-case-2">
+            <a href="Se-beber-nao-case-2.html">
+                <img class="Capa Se-beber-nao-case-2" src="../Images/Se beber nao case 2.jpg" />
+                <ul class="info">
+                    <li class="topic-Title"><strong>Se beber não case 2</strong></li>
+                    <li class="topic-Subtitle"></li>
+                    <li class="topic">Duração: 1h 41min 49s</li>
+                    <li class="topic">Dublado</li>
+                </ul>
+            </a>
+        </nav>
+    </div>
 </body>
 </html>
