--- a/Movies/Batman/Batman-O-cavaleiro-das-trevas.html
+++ b/Movies/Batman/Batman-O-cavaleiro-das-trevas.html
@@ -5,6 +5,12 @@
     <title>Batman - O cavaleiro das trevas</title>
 </head>
 <body>
+    <header>
+        <a href="../../index.html">
+            <img id="logo" class="Logo" src="../../Images/Logo black.png" />
+        </a>
+    </header>
+    
     <h1 class="Title">Batman</h1>
     <h2 class="Sub Title">O cavaleiro das trevas</h2>
 
