--- a/Movies/Rei-Arthur.html
+++ b/Movies/Rei-Arthur.html
@@ -6,6 +6,12 @@
     <title>Rei Arthur - A lenda da espada</title>
 </head>
 <body>
+    <header>
+        <a href="../../index.html">
+            <img id="logo" class="Logo" src="../../Images/Logo black.png" />
+        </a>
+    </header>
+    
     <h1 class="Title">Rei Arthur</h1>
     <h2 class="Sub Title">A lenda da espada</h2>
 
