--- a/Movies/Thor-Ragnarok.html
+++ b/Movies/Thor-Ragnarok.html
@@ -5,6 +5,12 @@
     <title>Thor Ragnarok</title>
 </head>
 <body>
+    <header>
+        <a href="../../index.html">
+            <img id="logo" class="Logo" src="../../Images/Logo black.png" />
+        </a>
+    </header>
+    
     <h1 class="Title">Thor Ragnarok</h1>
     <iframe 
         src="https://drive.google.com/file/d/1NV1CoCLS7bZ2LENeW31wpmr4JYr8GQBQ/preview?"
