--- a/Movies/Top-Gun.html
+++ b/Movies/Top-Gun.html
@@ -5,6 +5,12 @@
     <title>Top Gun - Asses indomáveis</title>
 </head>
 <body>
+    <header>
+        <a href="../../index.html">
+            <img id="logo" class="Logo" src="../../Images/Logo black.png" />
+        </a>
+    </header>
+    
     <h1 class="Title">Top Gun</h1>
     <h2 class="Sub Title">Asses Indomáveis</h2>
 
