--- a/Movies/Top-Gun.html
+++ b/Movies/Top-Gun.html
@@ -7,7 +7,7 @@
 <body>
     <header>
         <a href="../../index.html">
-            <img id="logo" class="Logo" src="../../Images/Logo black.png" />
+            <img id="logo" class="Logo" src="../Images/Logo black.png" />
         </a>
     </header>
     
