--- a/Movies/Top-Gun.html
+++ b/Movies/Top-Gun.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header>
-        <a href="../../index.html">
+        <a href="../index.html">
             <img id="logo" class="Logo" src="../Images/Logo black.png" />
         </a>
     </header>
