--- a/Movies/Sherlock.html
+++ b/Movies/Sherlock.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     <header>
-        <a href="../../index.html">
-            <img id="logo" class="Logo" src="../../Images/Logo black.png" />
+        <a href="../index.html">
+            <img id="logo" class="Logo" src="../Images/Logo black.png" />
         </a>
     </header>
     
