--- a/Movies/Indiana Jones/Indiana-Jones-e-a-ultima-cruzada.html
+++ b/Movies/Indiana Jones/Indiana-Jones-e-a-ultima-cruzada.html
@@ -34,7 +34,7 @@
             </a>
         </nav>
 
-        <nav class="titulo Indiana-Jones-e-o-templo-perdido" style="display:none">
+        <nav class="titulo Indiana-Jones-e-o-templo-perdido">
             <a href="Indiana-Jones-e-o-templo-perdido.html">
                 <img class="Capa Indiana-Jones-e-o-templo-perdido" src="../../Images/Indiana Jones e o templo perdido.jpg" />
                 <ul class="info">
