--- a/Movies/Indiana Jones/Indiana-Jones-e-o-templo-perdido.html
+++ b/Movies/Indiana Jones/Indiana-Jones-e-o-templo-perdido.html
@@ -4,7 +4,9 @@
 
     <link rel="stylesheet" href="../../Styles/home.css" />
     <link rel="stylesheet" href="../../Styles/moviePg.css" />
-    <title>Indiana Jones e o templo perdido</title>
+    <link rel="stylesheet" href="../../Styles/seq.css" />
+
+    <title>Indiana Jones e o templo perdidoo</title>
 </head>
 <body>
     <header>
@@ -16,13 +18,14 @@
     <h1 class="Title">Indiana Jones</h1>
     <h2 class="Sub Title"> e o templo perdido</h2>
 
-    <iframe src=""
+
+    <iframe src="https://mega.nz/embed#!t4BVia5Y!NW6aFyz2BTeMCzdq2eK9DApqXssshh1QxuUhHdpy59g"
             frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     <div class="sequencia" style="margin-left:370px;">
         <nav class="titulo Indiana-Jones-e-a-ultima-cruzada">
-            <a href="Movies/Indiana Jones/Indiana-Jones-e-a-ultima-cruzada.html">
-                <img class="Capa Indiana-Jones-e-a-ultima-cruzada" src="Images/Indiana Jones e a ultima cruzada.jpg" />
+            <a href="Movies/Indiana Jones/Indiana-Jones-e-a-ultima-cruzada.html" style="display:none">
+                <img class="Capa Indiana-Jones-e-a-ultima-cruzada" src="../../Images/Indiana Jones e a ultima cruzada.jpg" />
                 <ul class="info">
                     <li class="topic-Title"><strong>Indiana Jones</strong></li>
                     <li class="topic-Subtitle">e a última cruzada</li>
@@ -33,20 +36,20 @@
         </nav>
 
         <nav class="titulo Indiana-Jones-e-os-caçadores-da-arca-perdida">
-            <a href="Movies/Indiana Jones/Indiana-Jones-e-os-caçadores-da-arca-perdida.html">
-                <img class="Capa Indiana-Jones-e-os-caçadores-da-arca-perdida" src="Images/Indiana Jones e os caçadores da arca perdida.jpg" />
+            <a href="Indiana-Jones-e-os-caçadores-da-arca-perdida.html">
+                <img class="Capa Indiana-Jones-e-os-caçadores-da-arca-perdida" src="../../Images/Indiana Jones e os caçadores da arca perdida.jpg" />
                 <ul class="info">
                     <li class="topic-Title"><strong>Indiana Jones</strong></li>
                     <li class="topic-Subtitle">e os caçadores da arca perdida</li>
-                    <li class="topic">Duração: </li>
+                    <li class="topic">Duração: 1h 58min 28s</li>
                     <li class="topic">Dublado</li>
                 </ul>
             </a>
         </nav>
 
-        <nav class="titulo Indiana-Jones-e-o-reino-da-caveira-de-cristal">
+        <nav class="titulo Indiana-Jones-e-o-reino-da-caveira-de-cristal" style="display:none">
             <a href="Movies/Indiana Jones/Indiana-Jones-e-o-reino-da-caveira-de-cristal.html">
-                <img class="Capa Indiana-Jones-e-o-reino-da-caveira-de-cristal" src="Images/Indiana Jones e o reino da caveira de cristal.jpg" />
+                <img class="Capa Indiana-Jones-e-o-reino-da-caveira-de-cristal" src="../../Images/Indiana Jones e o reino da caveira de cristal.jpg" />
                 <ul class="info">
                     <li class="topic-Title"><strong>Indiana Jones</strong></li>
                     <li class="topic-Subtitle">e o reino da caveira de cristal</li>
