--- a/Movies/Indiana Jones/Indiana-Jones-e-os-caçadores-da-arca-perdida.html
+++ b/Movies/Indiana Jones/Indiana-Jones-e-os-caçadores-da-arca-perdida.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../../Styles/moviePg.css" />
     <link rel="stylesheet" href="../../Styles/seq.css"/>
 
-    <title>Indiana Jones e a última cruzada</title>
+    <title>Indiana Jones e os caçadores da arca perdida</title>
 </head>
 <body>
     <header>
