--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <li class="topic-Title"><strong>Batman</strong></li>
                         <li class="topic-Subtitle">A piada mortal</li>
                         <li class="topic">Duração: 1h 45min</li>
-                        <li class="topic">Inglês</li>
+                        <li class="topic">Legendado</li>
                     </ul>
                 </a>
             </nav>
