--- a/Movies/Batman/Batman-A-piada-mortal.html
+++ b/Movies/Batman/Batman-A-piada-mortal.html
@@ -18,6 +18,6 @@
             frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
     </iframe>
 
-    <h1 class="Sub title">Inglês</h1>>
+    <h1 class="Sub title">Legendado</h1>>
 </body>
 </html>
