--- a/Movies/Indiana Jones/Indiana-Jones-e-a-ultima-cruzada.html
+++ b/Movies/Indiana Jones/Indiana-Jones-e-a-ultima-cruzada.html
@@ -4,6 +4,8 @@
 
     <link rel="stylesheet" href="../../Styles/home.css" />
     <link rel="stylesheet" href="../../Styles/moviePg.css" />
+    <link rel="stylesheet" href="../../Styles/seq.css" />
+
     <title>Indiana Jones e a última cruzada</title>
 </head>
 <body>
@@ -17,12 +19,12 @@
     <h1 class="Title">Indiana Jones</h1>
     <h2 class="Sub Title"> e a última cruzada</h2>
 
-    <iframe src=""
+    <iframe src="https://mega.nz/embed#!o5IXGQqA!HYj1dFrEPf9SWMyiNAhiX1yAoy0vWAxrCdCVN3ZYqlQ"
             frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
     </iframe>
 
-    <div class="sequencia" style="margin-left:370px;">
-        <nav class="titulo Indiana-Jones-e-o-reino-da-caveira-de-cristal" style="display:none">
+    <div class="sequencia2">
+        <nav class="titulo Indiana-Jones-e-o-reino-da-caveira-de-cristal" style="display: none">
             <a href="Indiana-Jones-e-o-reino-da-caveira-de-cristal.html">
                 <img class="Capa Indiana-Jones-e-o-reino-da-caveira-de-cristal" src="../../Images/Indiana Jones e o reino da caveira de cristal.jpg" />
                 <ul class="info">
