--- a/Movies/Indiana Jones/Indiana-Jones-e-o-reino-da-caveira-de-cristal.html
+++ b/Movies/Indiana Jones/Indiana-Jones-e-o-reino-da-caveira-de-cristal.html
@@ -19,7 +19,7 @@
     <iframe src=""
             frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-    <div class="sequencia" style="margin-left:370px;">
+    <div class="sequencia3">
         <nav class="titulo Indiana-Jones-e-a-ultima-cruzada">
             <a href="Movies/Indiana Jones/Indiana-Jones-e-a-ultima-cruzada.html">
                 <img class="Capa Indiana-Jones-e-a-ultima-cruzada" src="Images/Indiana Jones e a ultima cruzada.jpg" />
