--- a/Movies/Indiana Jones/Indiana-Jones-e-o-templo-perdido.html
+++ b/Movies/Indiana Jones/Indiana-Jones-e-o-templo-perdido.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <meta charset="utf-8" />
+    <meta charset="iso-8859-1" />
 
     <link rel="stylesheet" href="../../Styles/home.css" />
     <link rel="stylesheet" href="../../Styles/moviePg.css" />
@@ -22,26 +22,26 @@
     <iframe src="https://mega.nz/embed#!t4BVia5Y!NW6aFyz2BTeMCzdq2eK9DApqXssshh1QxuUhHdpy59g"
             frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-    <div class="sequencia" style="margin-left:370px;">
+    <div class="sequencia2">
         <nav class="titulo Indiana-Jones-e-a-ultima-cruzada">
-            <a href="Movies/Indiana Jones/Indiana-Jones-e-a-ultima-cruzada.html" style="display:none">
+            <a href="Movies/Indiana Jones/Indiana-Jones-e-a-ultima-cruzada.html">
                 <img class="Capa Indiana-Jones-e-a-ultima-cruzada" src="../../Images/Indiana Jones e a ultima cruzada.jpg" />
                 <ul class="info">
                     <li class="topic-Title"><strong>Indiana Jones</strong></li>
-                    <li class="topic-Subtitle">e a Ãºltima cruzada</li>
-                    <li class="topic">DuraÃ§Ã£o: 2h 06min 53s</li>
+                    <li class="topic-Subtitle">e a última cruzada</li>
+                    <li class="topic">Duração: 2h 06min 53s</li>
                     <li class="topic">Dublado</li>
                 </ul>
             </a>
         </nav>
 
-        <nav class="titulo Indiana-Jones-e-os-caÃ§adores-da-arca-perdida">
-            <a href="Indiana-Jones-e-os-caÃ§adores-da-arca-perdida.html">
-                <img class="Capa Indiana-Jones-e-os-caÃ§adores-da-arca-perdida" src="../../Images/Indiana Jones e os caÃ§adores da arca perdida.jpg" />
+        <nav class="titulo Indiana-Jones-e-os-caçadores-da-arca-perdida">
+            <a href="Indiana-Jones-e-os-caçadores-da-arca-perdida.html">
+                <img class="Capa Indiana-Jones-e-os-caçadores-da-arca-perdida" src="../../Images/Indiana Jones e os caçadores da arca perdida.jpg" />
                 <ul class="info">
                     <li class="topic-Title"><strong>Indiana Jones</strong></li>
-                    <li class="topic-Subtitle">e os caÃ§adores da arca perdida</li>
-                    <li class="topic">DuraÃ§Ã£o: 1h 58min 28s</li>
+                    <li class="topic-Subtitle">e os caçadores da arca perdida</li>
+                    <li class="topic">Duração: 1h 58min 28s</li>
                     <li class="topic">Dublado</li>
                 </ul>
             </a>
@@ -53,7 +53,7 @@
                 <ul class="info">
                     <li class="topic-Title"><strong>Indiana Jones</strong></li>
                     <li class="topic-Subtitle">e o reino da caveira de cristal</li>
-                    <li class="topic">DuraÃ§Ã£o: </li>
+                    <li class="topic">Duração: </li>
                     <li class="topic">Dublado</li>
                 </ul>
             </a>
