--- a/index.html
+++ b/index.html
@@ -143,7 +143,31 @@
                 </a>
             </nav>
 
-            <nav class="titulo Indiana-Jones-e-a-ultima-cruzada" style="display:none">
+            <nav class="titulo Indiana-Jones-e-os-caçadores-da-arca-perdida">
+                <a href="Movies/Indiana Jones/Indiana-Jones-e-os-caçadores-da-arca-perdida.html">
+                    <img class="Capa Indiana-Jones-e-os-caçadores-da-arca-perdida" src="Images/Indiana Jones e os caçadores da arca perdida.jpg" />
+                    <ul class="info">
+                        <li class="topic-Title"><strong>Indiana Jones</strong></li>
+                        <li class="topic-Subtitle">e os caçadores da arca perdida</li>
+                        <li class="topic">Duração: 1h 55min 18s</li>
+                        <li class="topic">Dublado</li>
+                    </ul>
+                </a>
+            </nav>
+
+            <nav class="titulo Indiana-Jones-e-o-templo-perdido">
+                <a href="Movies/Indiana Jones/Indiana-Jones-e-o-templo-perdido.html">
+                    <img class="Capa Indiana-Jones-e-o-templo-perdido" src="Images/Indiana Jones e o templo perdido.jpg" />
+                    <ul class="info">
+                        <li class="topic-Title"><strong>Indiana Jones</strong></li>
+                        <li class="topic-Subtitle">e o templo perdido</li>
+                        <li class="topic">Duração: 1h 58min 28s</li>
+                        <li class="topic">Dublado</li>
+                    </ul>
+                </a>
+            </nav>
+
+            <nav class="titulo Indiana-Jones-e-a-ultima-cruzada">
                 <a href="Movies/Indiana Jones/Indiana-Jones-e-a-ultima-cruzada.html">
                     <img class="Capa Indiana-Jones-e-a-ultima-cruzada" src="Images/Indiana Jones e a ultima cruzada.jpg" />
                     <ul class="info">
@@ -167,25 +191,25 @@
                 </a>
             </nav>
 
-            <nav class="titulo Indiana-Jones-e-o-templo-perdido">
-                <a href="Movies/Indiana Jones/Indiana-Jones-e-o-templo-perdido.html">
-                    <img class="Capa Indiana-Jones-e-o-templo-perdido" src="Images/Indiana Jones e o templo perdido.jpg" />
+            <nav class="titulo Homem-aranha-de-volta-ao-lar" style="display: none">
+                <a href="Movies/Homem aranha/Homem-aranha-de-volta-ao-lar.html">
+                    <img class="Capa Homem-aranha-de-volta-ao-lar" src="Images/homem aranha de volta ao lar.jpg" />
                     <ul class="info">
-                        <li class="topic-Title"><strong>Indiana Jones</strong></li>
-                        <li class="topic-Subtitle">e o templo perdido</li>
-                        <li class="topic">Duração: 1h 58min 28s</li>
+                        <li class="topic-Title"><strong>Homem Aranha</strong></li>
+                        <li class="topic-Subtitle">de volta ao lar</li>
+                        <li class="topic">Duração: 2h 13min 28s</li>
                         <li class="topic">Dublado</li>
                     </ul>
                 </a>
             </nav>
 
-            <nav class="titulo Indiana-Jones-e-os-caçadores-da-arca-perdida">
-                <a href="Movies/Indiana Jones/Indiana-Jones-e-os-caçadores-da-arca-perdida.html">
-                    <img class="Capa Indiana-Jones-e-os-caçadores-da-arca-perdida" src="Images/Indiana Jones e os caçadores da arca perdida.jpg" />
+            <nav class="titulo Homem-aranha-longe-de-casa" style="display: none">
+                <a href="Movies/Homem aranha/Homem-aranha-longe-de-casa.html">
+                    <img class="Capa Homem-aranha-longe-de-casa" src="Images/homem aranha longe de casa.jpg" />
                     <ul class="info">
-                        <li class="topic-Title"><strong>Indiana Jones</strong></li>
-                        <li class="topic-Subtitle">e os caçadores da arca perdida</li>
-                        <li class="topic">Duração: 1h 55min 18s</li>
+                        <li class="topic-Title"><strong>Homem Aranha</strong></li>
+                        <li class="topic-Subtitle">longe de casa</li>
+                        <li class="topic">Duração: 2h 09min 23s</li>
                         <li class="topic">Dublado</li>
                     </ul>
                 </a>
