--- a/Movies/Indiana Jones/Indiana-Jones-e-os-caçadores-da-arca-perdida.html
+++ b/Movies/Indiana Jones/Indiana-Jones-e-os-caçadores-da-arca-perdida.html
@@ -48,7 +48,7 @@
 
         <nav class="titulo Indiana-Jones-e-o-reino-da-caveira-de-cristal" style="display:none">
             <a href="Movies/Indiana Jones/Indiana-Jones-e-o-reino-da-caveira-de-cristal.html">
-                <img class="Capa Indiana-Jones-e-o-reino-da-caveira-de-cristal" src="Images/Indiana Jones e o reino da caveira de cristal.jpg" />
+                <img class="Capa Indiana-Jones-e-o-reino-da-caveira-de-cristal" src="../../Images/Indiana Jones e o reino da caveira de cristal.jpg" />
                 <ul class="info">
                     <li class="topic-Title"><strong>Indiana Jones</strong></li>
                     <li class="topic-Subtitle">e o reino da caveira de cristal</li>
