--- a/Movies/Indiana Jones/Indiana-Jones-e-a-ultima-cruzada.html
+++ b/Movies/Indiana Jones/Indiana-Jones-e-a-ultima-cruzada.html
@@ -1,12 +1,12 @@
 <html>
 <head>
-    <meta charset="iso-8859-1"/>
+    <meta charset="utf-8"/>
 
     <link rel="stylesheet" href="../../Styles/home.css" />
     <link rel="stylesheet" href="../../Styles/moviePg.css" />
     <link rel="stylesheet" href="../../Styles/seq.css" />
 
-    <title>Indiana Jones e a última cruzada</title>
+    <title>Indiana Jones e a Ãºltima cruzada</title>
 </head>
 <body>
 
@@ -17,7 +17,7 @@
     </header>
 
     <h1 class="Title">Indiana Jones</h1>
-    <h2 class="Sub Title"> e a última cruzada</h2>
+    <h2 class="Sub Title"> e a Ãºltima cruzada</h2>
 
     <iframe src="https://mega.nz/embed#!o5IXGQqA!HYj1dFrEPf9SWMyiNAhiX1yAoy0vWAxrCdCVN3ZYqlQ"
             frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
@@ -30,7 +30,7 @@
                 <ul class="info">
                     <li class="topic-Title"><strong>Indiana Jones</strong></li>
                     <li class="topic-Subtitle">e o reino da caveira de cristal</li>
-                    <li class="topic">Duração: </li>
+                    <li class="topic">DuraÃ§Ã£o: </li>
                     <li class="topic">Dublado</li>
                 </ul>
             </a>
@@ -42,19 +42,19 @@
                 <ul class="info">
                     <li class="topic-Title"><strong>Indiana Jones</strong></li>
                     <li class="topic-Subtitle">e o templo perdido</li>
-                    <li class="topic">Duração: 1h 58min 28s</li>
+                    <li class="topic">DuraÃ§Ã£o: 1h 58min 28s</li>
                     <li class="topic">Dublado</li>
                 </ul>
             </a>
         </nav>
 
-        <nav class="titulo Indiana-Jones-e-os-caçadores-da-arca-perdida">
-            <a href="Indiana-Jones-e-os-caçadores-da-arca-perdida.html">
-                <img class="Capa Indiana-Jones-e-os-caçadores-da-arca-perdida" src="../../Images/Indiana Jones e os caçadores da arca perdida.jpg" />
+        <nav class="titulo Indiana-Jones-e-os-caÃ§adores-da-arca-perdida">
+            <a href="Indiana-Jones-e-os-caÃ§adores-da-arca-perdida.html">
+                <img class="Capa Indiana-Jones-e-os-caÃ§adores-da-arca-perdida" src="../../Images/Indiana Jones e os caÃ§adores da arca perdida.jpg" />
                 <ul class="info">
                     <li class="topic-Title"><strong>Indiana Jones</strong></li>
-                    <li class="topic-Subtitle">e os caçadores da arca perdida</li>
-                    <li class="topic">Duração: </li>
+                    <li class="topic-Subtitle">e os caÃ§adores da arca perdida</li>
+                    <li class="topic">DuraÃ§Ã£o: </li>
                     <li class="topic">Dublado</li>
                 </ul>
             </a>
