--- a/Movies/Indiana Jones/Indiana-Jones-e-a-ultima-cruzada.html
+++ b/Movies/Indiana Jones/Indiana-Jones-e-a-ultima-cruzada.html
@@ -54,7 +54,7 @@
                 <ul class="info">
                     <li class="topic-Title"><strong>Indiana Jones</strong></li>
                     <li class="topic-Subtitle">e os caçadores da arca perdida</li>
-                    <li class="topic">Duração: </li>
+                    <li class="topic">Duração: 1h 58min 28s</li>
                     <li class="topic">Dublado</li>
                 </ul>
             </a>
