--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 </a>
             </nav>
 
-            <nav class="titulo Homem-aranha-de-volta-ao-lar" style="display: none">
+            <nav class="titulo Homem-aranha-de-volta-ao-lar">
                 <a href="Movies/Homem aranha/Homem-aranha-de-volta-ao-lar.html">
                     <img class="Capa Homem-aranha-de-volta-ao-lar" src="Images/homem aranha de volta ao lar.jpg" />
                     <ul class="info">
