--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 </a>
             </nav>
 
-            <nav class="titulo Homem-aranha-longe-de-casa" style="display: none">
+            <nav class="titulo Homem-aranha-longe-de-casa">
                 <a href="Movies/Homem aranha/Homem-aranha-longe-de-casa.html">
                     <img class="Capa Homem-aranha-longe-de-casa" src="Images/homem aranha longe de casa.jpg" />
                     <ul class="info">
