--- a/Movies/Homem aranha/Homem-aranha-longe-de-casa.html
+++ b/Movies/Homem aranha/Homem-aranha-longe-de-casa.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <meta charset="iso-8859-1" />
+    <meta charset="utf-8" />
 
     <link rel="stylesheet" href="../../Styles/seq.css" />
     <link rel="stylesheet" href="../../Styles/moviePg.css" />
@@ -17,7 +17,7 @@
     <h1 class="Title">Homem aranha</h1>
     <h2 class="Sub Title">Longe de casa</h2>
 
-    <iframe src=""
+    <iframe src="https://mega.nz/embed#!dpphVYbD!Pdj24MQ4oG7b-QPJYmft0ZIK3Vp84uHbXP97V2Mesl0"
             frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     <div class="sequencia1">
@@ -27,7 +27,7 @@
                 <ul class="info">
                     <li class="topic-Title"><strong>Homem Aranha</strong></li>
                     <li class="topic-Subtitle">de volta ao lar</li>
-                    <li class="topic">Duração: 2h 13min 28s</li>
+                    <li class="topic">DuraÃ§Ã£o: 2h 13min 28s</li>
                     <li class="topic">Dublado</li>
                 </ul>
             </a>
