--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
             <nav class="titulo Homem-aranha-longe-de-casa">
                 <a href="Movies/Homem aranha/Homem-aranha-longe-de-casa.html">
-                    <img class="Capa Homem-aranha-longe-de-casa" src="Images/homem aranha longe de casa.jpg" />
+                    <img class="Capa Homem-aranha-longe-de-casa" src="Images/Homem aranha longe de casa.jpg" />
                     <ul class="info">
                         <li class="topic-Title"><strong>Homem Aranha</strong></li>
                         <li class="topic-Subtitle">longe de casa</li>
