--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 </a>
             </nav>
 
-            <nav class="titulo Indiana-Jones-e-o-reino-da-caveira-de-cristal" style="display:none">
+            <nav class="titulo Indiana-Jones-e-o-reino-da-caveira-de-cristal" style="display: none">
                 <a href="Movies/Indiana Jones/Indiana-Jones-e-o-reino-da-caveira-de-cristal.html">
                     <img class="Capa Indiana-Jones-e-o-reino-da-caveira-de-cristal" src="Images/Indiana Jones e o reino da caveira de cristal.jpg" />
                     <ul class="info">
@@ -203,9 +203,9 @@
                 </a>
             </nav>
 
-            <nav class="titulo Homem-aranha-longe-de-casa">
+            <nav class="titulo Homem-aranha-longe-de-casa" style="display: none">
                 <a href="Movies/Homem aranha/Homem-aranha-longe-de-casa.html">
-                    <img class="Capa Homem-aranha-longe-de-casa" src="Images/Homem aranha longe de casa.jpg" />
+                    <img class="Capa Homem-aranha-longe-de-casa" src="Images/homem aranha longe de casa.jpg" />
                     <ul class="info">
                         <li class="topic-Title"><strong>Homem Aranha</strong></li>
                         <li class="topic-Subtitle">longe de casa</li>
@@ -228,6 +228,17 @@
                         <li class="topic">Study in Pink</li>
                         <li class="topic">Duração: 55min</li>
                         <li class="topic">Legendado</li>
+                    </ul>
+                </a>
+            </nav>
+
+            <nav class="titulo Chernobyl">
+                <a href="Movies/Chernobyl/Chernobyl_index.html">
+                    <img class="Capa Chernobyl" src="Images/Chernobyl/Chernobyl.jpg" />
+                    <ul class="info">
+                        <li class="topic-Title"><strong>Chernobyl</strong></li>
+                        <li class="topic">1ª Temporada</li>
+                        <li class="topic">Dublado</li>
                     </ul>
                 </a>
             </nav>
