--- a/Movies/Chernobyl/Chernobyl_index.html
+++ b/Movies/Chernobyl/Chernobyl_index.html
@@ -32,7 +32,7 @@
                     </a>
                 </nav>
 
-                <nav class="titulo Chernobyl S1E2" style="display: none">
+                <nav class="titulo Chernobyl S1E2">
                     <a href="S1E2.html">
                         <img class="Capa S1E2" src="../../Images/Chernobyl/S1E2.jpeg" />
                         <ul class="info">
