--- a/Movies/Chernobyl/S1E1.html
+++ b/Movies/Chernobyl/S1E1.html
@@ -25,7 +25,7 @@
     <h2>Temporada 1 - Episódio 1</h2>
 
 
-    <div class="sequencia4" style="margin-top: 0; display: none">
+    <div class="sequencia4" style="margin-top: 0;>
         <nav class="titulo Chernobyl S1E2">
             <a class="Chernobyl" href="S1E2.html">
                 <img class="Capa Chernobyl S1E2" src="../../Images/Chernobyl/S1E2.jpeg" />
