--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ﻿<html lang="pt-br">
     <head>
-        <meta charset="iso-8859-1"/>
+        <meta charset="utf-8"/>
         <link rel="stylesheet" href="Styles/home.css"/>
 
         <title>Home - Watchers</title>
