--- a/Movies/Chernobyl/S1E1.html
+++ b/Movies/Chernobyl/S1E1.html
@@ -25,7 +25,7 @@
     <h2>Temporada 1 - Episódio 1</h2>
 
 
-    <div class="sequencia4" style="margin-top: 0;>
+    <div class="sequencia4" style="margin-top: 0>
         <nav class="titulo Chernobyl S1E2">
             <a class="Chernobyl" href="S1E2.html">
                 <img class="Capa Chernobyl S1E2" src="../../Images/Chernobyl/S1E2.jpeg" />
@@ -38,7 +38,7 @@
             </a>
         </nav>
 
-        <nav class="titulo Chernobyl S1E3">
+        <nav class="titulo Chernobyl S1E3" style="display: none">
             <a class="Chernobyl" href="S1E3.html">
                 <img class="Capa Chernobyl S1E3" src="../../Images/Chernobyl/S1E3.jpeg" />
                 <ul class="info Chernobyl">
@@ -50,7 +50,7 @@
             </a>
         </nav>
 
-        <nav class="titulo Chernobyl S1E4">
+        <nav class="titulo Chernobyl S1E4" style="display: none">
             <a class="Chernobyl" href="S1E4.html">
                 <img class="Capa Chernobyl S1E4" src="../../Images/Chernobyl/S1E4.jpeg"/>
                 <ul class="info Chernobyl">
@@ -63,7 +63,7 @@
         </nav>
         
         <div class="Chernobyl S1E5">
-            <nav class="titulo Chernobyl S1E5">
+            <nav class="titulo Chernobyl S1E5" style="display: none">
                 <a class="Chernobyl" href="S1E5.html">
                     <img class="Capa Chernobyl S1E5" src="../../Images/Chernobyl/S1E5.jpeg" />
                     <ul class="info Chernobyl">
