--- a/Movies/Chernobyl/S1E2.html
+++ b/Movies/Chernobyl/S1E2.html
@@ -37,7 +37,7 @@
             </a>
         </nav>
 
-        <nav class="titulo Chernobyl S1E3">
+        <nav class="titulo Chernobyl S1E3" style="display: none">
             <a class="Chernobyl" href="S1E3.html">
                 <img class="Capa Chernobyl S1E3" src="../../Images/Chernobyl/S1E3.jpeg" />
                 <ul class="info Chernobyl">
@@ -49,7 +49,7 @@
             </a>
         </nav>
 
-        <nav class="titulo Chernobyl S1E4">
+        <nav class="titulo Chernobyl S1E4" style="display: none">
             <a class="Chernobyl" href="S1E4.html">
                 <img class="Capa Chernobyl S1E4" src="../../Images/Chernobyl/S1E4.jpeg"/>
                 <ul class="info Chernobyl">
@@ -62,7 +62,7 @@
         </nav>
         
         <div class="Chernobyl S1E5">
-            <nav class="titulo Chernobyl S1E5">
+            <nav class="titulo Chernobyl S1E5" style="display: none">
                 <a class="Chernobyl" href="S1E5.html">
                     <img class="Capa Chernobyl S1E5" src="../../Images/Chernobyl/S1E5.jpeg" />
                     <ul class="info Chernobyl">
