--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 </a>
             </nav>
 
-            <nav class="titulo Contratempo">
+            <nav class="titulo Contratempo" style="display: none">
                 <a href="Movies/Contratempo.html">
                     <img class="Capa Contratempo" src="Images/Contratempo.jpg" />
                     <ul class="info">
