--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ﻿<html lang="pt-br">
     <head>
-        <meta charset="utf-8"/>
+        <meta charset="iso-8859-1"/>
         <link rel="stylesheet" href="Styles/home.css"/>
 
         <title>Home - Watchers</title>
@@ -95,7 +95,7 @@
                 </a>
             </nav>
 
-            <nav class="titulo Contratempo" style="display: none">
+            <nav class="titulo Contratempo" style="display: none;">
                 <a href="Movies/Contratempo.html">
                     <img class="Capa Contratempo" src="Images/Contratempo.jpg" />
                     <ul class="info">
@@ -203,7 +203,7 @@
                 </a>
             </nav>
 
-            <nav class="titulo Homem-aranha-longe-de-casa" style="display: none">
+            <nav class="titulo Homem-aranha-longe-de-casa">
                 <a href="Movies/Homem aranha/Homem-aranha-longe-de-casa.html">
                     <img class="Capa Homem-aranha-longe-de-casa" src="Images/homem aranha longe de casa.jpg" />
                     <ul class="info">
